--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="empresa">
                 <span class="empresa-ano">2022</span>
                 <h3 class="empresa-titulo">Universidade Federal da Bahia</h3>
-                <span class="empresa-titulo">Iniciação Científica - IC</span>
+                <span class="empresa-titulo"> Iniciação Científica -- IC</span>
                 <p class="empresa-texto">Na IC trabalho no projeto de Investigação e Implementação de Desenvolvimento de Sistemas de Informação Utilizando Padrões Arquiteturais Web</p>
                 <ul class="empresa-habilidade">
                     <li>HTML</li>
