--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main class="introducao">
         <img src="./imagens/perfil.jpg" alt="Perfil de Letícia, cabelo solto e preto, blusa vermelha">
         <div>
-            <h1>Desenvolvedora <br> Front-End & <br> Analista de Sistemas</h1>
+            <h1>Desenvolvedora Front-End & Analista de Sistemas</h1>
             <p>Localizada em Salvador/BA 🏖️</p>
         </div>
     </main>
@@ -136,8 +136,10 @@
         </div>
         <p class="footer-copy"> Letícia - Alguns direitos reservados.</p>
     </footer>
-    <div class="setas" class="#topo">
-        <a href=""><img src="../imagens/seta.png" alt=""></a>
+    <div class="setas">
+        <a href="#topo">
+            <img src="../imagens/seta.png" alt="">
+        </a>
     </div>
 </body>
 
