--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </footer>
     <div class="setas">
         <a href="#topo">
-            <img src="../imagens/seta.png" alt="">
+            <img src="../Portfólio/imagens/seta.png" alt="">
         </a>
     </div>
 </body>
